@@ -3,6 +3,9 @@
 - A distro which used Module::Build and ran no tests would be marked as
   failure. Fixed by Graham Knop.
 
+- Under debug mode, the output from the CPAN module's init phase is no longer
+  output via diag() calls. Patch by Graham Knop.
+
 
 0.17   2013-07-13
 
